fixing overflow.

--- a/src/app/pages/database/list/list.component.sass
+++ b/src/app/pages/database/list/list.component.sass
@@ -76,3 +76,5 @@
         right: 40px
         margin-top: 10px
         cursor: pointer
+.fixedTPLUL
+    width: calc(100% - 45px)
